# Expound

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.en.md  README.ja.md  README.md  index.html  manifesto.md  pyproject.toml
audience_personas/: README.md  lawyer.md  operator.md  researcher.md
docs/: architecture.md  partner-journey.en.md  partner-journey.ja.md  partner-journey.md  training-guide.en.md  training-guide.ja.md  training-guide.md
failure_modes/: README.md  citation_fabrication.md  numerical_precision.md  time_sensitivity.md
preview/: index.en.html  index.html  index.ja.html
src/expound/: __init__.py  cli.py  client.py  knowledge.py  orchestrator.py  state.py
src/expound/agents/: __init__.py  application.py  certification.py  eligibility.py  enablement.py  training.py
workflows/01_reading_long_documents/: README.md  prompts.md  verification_checklist.md
workflows/01_reading_long_documents/examples/: EXAMPLE_50page_doc.md
workflows/02_legal_adjacent_memo/: README.md
workflows/03_market_research/: README.md
