[project]
name = "expound"
version = "0.1.0"
description = "Agentic service that helps enterprises join the Anthropic Partner Network and complete training & certification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.scripts]
expound = "expound.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expound"]
